--- a/pruebagit.html
+++ b/pruebagit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola mundo test</title>
 </head>
 <body>
     <h1>Hola mundo!! aeeeee</h1>
