Modificación pruebagit.html

--- a/pruebagit.html
+++ b/pruebagit.html
@@ -6,6 +6,6 @@
     <title>Hola mundo test</title>
 </head>
 <body>
-    <h1>Hola mundo!! aeeeee yuhuuuaaaaaaa</h1>
+    <h1>Hola chica coder!! aeeeee yuhuuuaaaaaaa</h1>
 </body>
 </html>
